done with subtask2

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -12,3 +12,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+#form {
+  font-size: 100px;
+  margin-top: 1000px;
+}
+
