--- a/public/css/books.css
+++ b/public/css/books.css
@@ -2,24 +2,33 @@ img {
   width: 125px;
   height: 150px; }
 
-#form {
-  display: none;
+.form-popup {
+  position: fixed;
+  top: 0%;
+  left: 0%;
   color: white;
-  background-color: rgba(0, 0, 0, 0.8);
   width: 100%;
   height: 100%;
-  position: fixed;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  -webkit-transform: translate(-50%, -50%); }
+  background-color:rgba(255,255,255,0.8);
+}
 
-#form-elements {
+.form-elements {
   position: fixed;
-  top: 25%;
-  text-align: center;
-  width: 100%;
-  height: 100%; }
+  top: 30%;
+  left: 40%;
+  color: black;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 10px;
+}
+
+.form-elements input{
+  border-radius: 5px;
+}
+
+.form-close{
+  display: none;
+}
 
 #heading {
   position: fixed;
@@ -28,7 +37,7 @@ img {
   margin-top: 0px;
   width: 100%; }
 
-#add-book {
+#add {
   position: fixed;
   top:7%;
   right: 2%; }
@@ -40,4 +49,16 @@ img {
   position: fixed;
   width:100%;
   top:5.9%;
+}
+
+.welome-note {
+  display: block;
+  position : fixed;
+  top: 45%;
+  left: 30%;
+  font-size: 50px;
+}
+
+.hide-welcome-note {
+  display: none;
 }
